Changes in 0.50.6:
  * conaryclient.updateChangeSet should have recursed by default
  * Metadata retrieval now works along distributed branches and shadows.

Changes in 0.50.5:
  * Streams return their value through __call__ instead of value()
  * Reimplemented ShortStream and IntStream in C
  * conary config now takes --show-passwords option, and does not pretty
    print config file values when not printing to screen.  This means that 
    conary config > <file> will result in a valid configuration file.
  * Updating groups didn't work when the group referenced troves as new
    which were already installed on the system
  * r.ComponentSpec('somecomponent', '.*') will no longer override the
    file specifications for packaging :debuginfo and :test components.
  * loadRecipe now takes a troveSpec as its first parameter, and uses that
    troveSpec to find the trove on the local system that matches the source
    component that is being loaded.  loadRecipe also automatically searches 
    the labels that are parents of the current recipe, so if you shadow a 
    recipe, any loadRecipe lines contained in that recipe should still do 
    what you want. 
  * merge didn't handle files converging
  * merge doesn't need to deal with autosource files
  * diffs between groups failed when members disappeared

Changes in 0.50.4:
  * Most rollback information is stored as a reference to a repository
    instead of storing full rollback data on the local system. The
    localRollbacks flag in conaryrc allows the old behavior to remain.
  * The CONARY state after a merge operation on a shadow now has the
    correct fileId for files that are not different than the parent
    version.
  * Added /usr/lib/conary/conarybugz.py to make it easy to automatically
    populate bugzilla databases from repositories.
  * Sped up Strip, NormalizeInitscriptLocation, NormalizePamConfig,
    TagDescription, and TagHandler policies by limiting them to
    only appropriate directories.